tests/snapshots/cli__snapshot_install_empty_configuration_file.snap
---
source: tests/cli.rs
assertion_line: 90
expression: content

---
thread 'main' panicked at 'called `Result::unwrap()` on an `Err` value: Error { inner: ErrorInner { kind: Custom, line: None, col: 0, at: None, message: "missing field `tools`", key: [] } }', src\config.rs:97:69
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

