tests/snapshots/cli__snapshot_install_no_tools_found.snap
---
source: tests/cli.rs
assertion_line: 90
expression: content

---
[INFO ] foreman did not find any tools to install.
        
        You can define system-wide tools in:
          {{FOREMAN_HOME}}foreman.toml
        or create a 'foreman.toml' file in your project directory.

